# gilda-opts

./: .coveragerc  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  README.md  README.rst  mypy.ini  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pylint.yml
cases/: Day.json  client.py  demand_grid.json  demand_grid_local_source.json  demand_grid_tssa.json  demand_grid_tssa_2.json  demand_grid_tssa_3.json  demand_grid_tssa_bess.json  full_day.json  srts_grid.json  srts_grid_pc.json  system_2.json  system_3.json  tssa.json
docs/: Examples.rst  GettingStarted.rst  Intro.rst  Modeling.rst  conf.py  index.rst  license.rst  requirements.txt
results display/: results_json.ipynb
results display/Input/: fullday.json  fullweek-output.json  fullweek.json  output-fullday.json
scripts/: gilda_opts_web.py
src/gilda_opts/: __init__.py  baseclass_json.py  battery.py  bess.py  bess_lp.py  bess_sched.py  block.py  bus.py  bus_lp.py  bus_sched.py  cesa.py  cesa_lp.py  cesa_sched.py  demand.py  demand_lp.py  demand_sched.py  electric_car.py  grid.py  (+32 more)
tests/: conftest.py  system.json  test_bus.py  test_case_demand_grid.py  test_case_demand_grid_cesa.py  test_case_demand_grid_electric_car.py  test_case_demand_grid_line.py  test_case_demand_grid_local_source.py  test_case_demand_grid_tssa.py  test_case_demand_grid_tssa_bess.py  test_case_sbtm_grid.py  test_case_srts_grid.py  test_demand.py  test_linear_problem.py  test_schedule.py  test_skeleton.py  test_system.py  test_system_lp.py  test_tssa.py  test_utils.py
